Add Search Component

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -46,3 +46,12 @@ header
     
 .content
   padding: 1em
+
+.search-btn
+  position: relative
+  right: 16px
+
+.search-wrapper
+  width: 300px
+  input
+    width: 90%
