Update list item & style

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -55,3 +55,35 @@ header
   width: 300px
   input
     width: 90%
+article.row
+  border-top: 1px solid #ccc
+  padding: 10px 0
+  border-bottom: 1px solid #ccc
+
+  .property-address
+    color: #0074e4
+    &:hover
+      color: #7bc0ff
+    &.visited
+      color: #640096
+
+  .sale::before
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    box-sizing: border-box;
+    color: rgb(51, 51, 51);
+    cursor: pointer;
+    display: inline-block;
+    font-family: 'Open Sans', open-sans, Arial, 'Helvetica Neue', sans-serif;
+    font-size: 10px;
+    font-weight: bold;
+    height: 10px;
+    line-height: 10px;
+    margin-right: 5px;
+    text-transform: uppercase;
+    vertical-align: middle;
+    white-space: nowrap;
+    width: 10px;
+    zoom: 1;
