Integrate leaflet with webapp

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -87,3 +87,15 @@ article.row
     white-space: nowrap;
     width: 10px;
     zoom: 1;
+    
+#map
+  height: 900px;
+  .marker-popup
+    width: 130px;
+    color: black;
+    img
+      vertical-align: bottom;
+    .popup-info
+      margin-left: 10px;
+      display: inline-block
+
