Create House Detail view with loader

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -60,6 +60,8 @@ article.row
   padding: 10px 0
   border-bottom: 1px solid #ccc
 
+  figure>img
+    cursor: pointer;
   .property-address
     color: #0074e4
     &:hover
