Add slideshow and sass loader for webpack

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -101,3 +101,7 @@ article.row
       margin-left: 10px;
       display: inline-block
 
+.row .loadedContent .picture-show
+  height: 368px;
+  width: 550px;
+  margin: 0 auto;
