Add detail view

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -105,3 +105,12 @@ article.row
   height: 368px;
   width: 550px;
   margin: 0 auto;
+
+.close-btn
+  cursor: poiter;
+
+.agent
+  h4.agent-name
+    margin: 2px;
+  .num-rates
+    vertical-align: middle;
